@@ -1,4 +1,5 @@
 1.9.6:
+* Tools/balio: Retry HTTP request if blockcypher.com server returns status code 429
 * WebUI/Transactions: Clicking on peer's IP copies it into clipboard
 * lib/utxo: use bufio.Writer for saving UTXO.db to disk
 * Client/TextUI: New command "rd" to show recently disconnected peers
